--- a/Projects/Color_Flipper/styles.css
+++ b/Projects/Color_Flipper/styles.css
@@ -58,13 +58,38 @@ button{
     padding: 20px 10px;
     border: 2px solid black;
     transition: 0.3s background;
+    background: black;
     font-family: 'VT323', monospace;
     font-size: x-large;
+    color: white;
 }
 button:hover{
-    color: white;
-    background: black;
+    
+    background: purple;
 }
 button:active{
     background: purple;
+}
+
+@media only screen and (max-width: 900px) {
+    .nav-center{
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-links{
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+    .nav-links li{
+        margin-top: 10px;
+    }
+    .nav-links li a{
+        margin-left: 0px;
+        padding: 0;
+    }
+    h2{
+        padding: 20px 10px;
+    }
+
 }
