--- a/Projects/Color_Flipper/styles.css
+++ b/Projects/Color_Flipper/styles.css
@@ -50,6 +50,7 @@ h2{
     color: white;
     padding: 20px 40px;
     border-radius: 10px;
+    font-size: xx-large;
 }
 button{
     width: 150px;
@@ -90,6 +91,16 @@ button:active{
     }
     h2{
         padding: 20px 10px;
+        font-size: large;
+    }
+    button{
+        font-size: large;
+        width: 100px;
+        padding: 10px 5px;
+    }
+    h4{
+        margin: 0;
+        margin-bottom: 10px;
     }
 
 }
