--- a/Projects/Reviews/style.css
+++ b/Projects/Reviews/style.css
@@ -47,13 +47,6 @@ nav{
     padding-right: 20vw;
 }
 
-@media only screen and (max-width: 900px) {
-    .container {
-        padding-left: 12vw;
-        padding-right: 12vw;
-    }
-  }
-
 button{
     width: 150px;
     text-align: center;
@@ -141,3 +134,40 @@ button:active{
     color: white;
 }
 
+
+@media only screen and (max-width: 900px) {
+    .container {
+        padding-left: 2vw;
+        padding-right: 2vw;
+    }
+    .nav-center{
+        flex-direction: column;
+        align-items: center;
+    }
+    .nav-links{
+        flex-direction: column;
+        margin: 0;
+        padding: 0;
+    }
+    .nav-links li{
+        margin-top: 10px;
+    }
+    .nav-links li a{
+        margin-left: 0px;
+        padding: 0;
+    }
+    h2{
+        padding: 20px 10px;
+        font-size: large;
+    }
+    button{
+        font-size: large;
+        width: 100px;
+        padding: 10px 5px;
+    }
+    h4{
+        margin: 0;
+        margin-bottom: 10px;
+    }
+
+}
